--- a/src/index.less
+++ b/src/index.less
@@ -11,4 +11,12 @@ body{
 .second{
     width: 400px;
     height: 300px;
+    display: grid;
+}
+.box{
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    backface-visibility: hidden;
+    font-smoothing: antialiased;
 }
